src/styles/globals.css
@import "tailwindcss";

@theme {
  --color-jet: oklch(0.26 0 0);
  --color-navy: oklch(0.23 0.045 274.77);
  --color-aqua: oklch(0.75 0.1161 202.1);
  --color-mint: oklch(0.8 0.153 157.22);
  --color-sand: oklch(0.73 0.1068 64.78);
  --color-royal: oklch(0.47 0.2181 287.03);
  --color-coral: oklch(0.65 0.2026 2.14);
  --color-storm: oklch(0.3 0.0577 278.29);
  --color-indigo: oklch(0.25 0.0504 283.83);
  --color-orange: oklch(0.61 0.1494 41.82);
  --color-fuchsia: oklch(0.58 0.2075 349.04);
  --color-primary: oklch(0.12 0.0352 274.49);
  --color-midnight: oklch(0.15 0.0467 272.68);
  --color-lavender: oklch(0.56 0.1926 291.15);
  --color-charcoal: oklch(0.35 0 0);
}

@theme inline {
  --animate-orbit: orbit calc(var(--duration) * 1s) linear infinite;

  @keyframes orbit {
    0% {
      transform: rotate(calc(var(--angle) * 1deg))
        translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
    }
    100% {
      transform: rotate(calc(var(--angle) * 1deg + 360deg))
        translateY(calc(var(--radius) * 1px))
        rotate(calc((var(--angle) * -1deg) - 360deg));
    }
  }
}

@layer base {
  html,
  body {
    overflow-x: hidden;
  }

  html[data-scroll-behavior="smooth"] {
    scroll-behavior: smooth !important;
  }

  body[data-scroll-locked] {
    overflow-y: auto !important;
    overflow-x: hidden !important;
    margin-right: 0 !important;
  }
}

@layer utilities {
  .loader {
    position: absolute;
    inset: 0;
  }

  .loading:before,
  .loading:after {
    position: absolute;
    top: 0;
    content: "";
  }

  .loading:before {
    left: -19.992px;
  }

  .loading:after {
    left: 19.992px;
    animation-delay: 0.32s !important;
  }

  .loading:before,
  .loading:after,
  .loading {
    height: 32px;
    width: 13.6px;
    background: oklch(0.5608 0.1976 257.25);
    animation: loading-animation 0.8s infinite ease-in-out;
  }

  .loading {
    margin: auto;
    position: absolute;
    text-indent: -9999em;
    top: calc(50% - 16px);
    right: calc(50% - 6.8px);
    animation-delay: 0.16s !important;
  }

  @keyframes loading-animation {
    0%,
    80%,
    100% {
      height: 32px;
      opacity: 0.75;
      box-shadow: 0 0 oklch(0.5608 0.1976 257.25);
    }

    40% {
      opacity: 1;
      height: 40px;
      box-shadow: 0 -8px oklch(0.5608 0.1976 257.25);
    }
  }
}

